--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,26 @@
 
     <link rel="stylesheet" type="text/css" href="../src/fonts/fonts.css" />
     <link rel="stylesheet" type="text/css" href=".././dist/css/styles.css" />
+
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '281544993998694',
+          xfbml      : true,
+          version    : 'v13.0'
+        });
+        FB.AppEvents.logPageView();
+      };
+    
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "https://connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+    </script>
+
     <script type="text/javascript" src=".././dist/js/scripts.js" defer></script>
   </head>
   <body>
