--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" type="image/png" href="../src/images/favicon.png" />
+    <link rel="icon" type="image/png" href="./src/images/favicon.png" />
 
     <title>Social Media Dashboard (with Dark Mode)</title>
 
-    <link rel="stylesheet" type="text/css" href="../src/fonts/fonts.css" />
-    <link rel="stylesheet" type="text/css" href=".././dist/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="./src/fonts/fonts.css" />
+    <link rel="stylesheet" type="text/css" href="./dist/css/styles.css" />
 
     <script>
       window.fbAsyncInit = function() {
@@ -30,7 +30,7 @@
        }(document, 'script', 'facebook-jssdk'));
     </script>
 
-    <script type="text/javascript" src=".././dist/js/scripts.js" defer></script>
+    <script type="text/javascript" src="./dist/js/scripts.js" defer></script>
   </head>
   <body>
     <!-- HEADER -->
